UC2 stap 6-7 geïmplementeerd